<resources>
    <string name="app_name">Movie Directory</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_text">New Search Term</string>
    <string name="search_hint">E.g: Batman</string>
    <string name="submit_text">Submit</string>
    <string name="Category">Category:</string>
    <string name="Released">Released:</string>
    <string name="MovieTitle">Movie Title:</string>
    <string name="ReleaseDate">Release Date:</string>
    <string name="Rating">Rating:</string>
    <string name="Runtime">Runtime:</string>
    <string name="DirectedBy">Directed By:</string>
    <string name="Actors">Actors:</string>
    <string name="Writers">Writers:</string>
    <string name="Plot">Plot:</string>
    <string name="BoxOffice">Box Office:</string>
    <string name="Ratings_NA">Ratings N/A</string>
    <string name="colon">:</string>
</resources>
