<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdimajeed.moviedirectory.moviedirectory.Activities.MovieDetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewDets"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" >

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/movieImageIDDets"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@android:color/black"
                android:contentDescription="@android:string/yes" />

            <TextView
                android:id="@+id/movieTitleIDDets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/movieImageIDDets"
                android:paddingLeft="5dp"
                android:text="@string/MovieTitle"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieReleaseIDDets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieTitleIDDets"
                android:layout_toRightOf="@id/movieImageIDDets"
                android:padding="5dp"
                android:text="@string/ReleaseDate" />


            <TextView
                android:id="@+id/movieCatIDDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieReleaseIDDets"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/movieImageIDDets"
                android:paddingLeft="5dp"
                android:text="@string/Category" />

            <TextView
                android:id="@+id/movieRatingIDDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieCatIDDet"
                android:layout_toRightOf="@id/movieImageIDDets"
                android:paddingLeft="5dp"
                android:text="@string/Rating" />

            <TextView
                android:id="@+id/runtimeDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieRatingIDDet"
                android:layout_toRightOf="@id/movieImageIDDets"
                android:paddingLeft="5dp"
                android:text="@string/Runtime" />


            <TextView
                android:id="@+id/directedByDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieImageIDDets"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/DirectedBy" />




        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewDets"
        app:layout_constraintVertical_bias="0.035">

        <TextView
            android:id="@+id/actorsDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Actors" />

        <TextView
            android:id="@+id/writersDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/actorsDet"
            android:padding="5dp"
            android:text="@string/Writers" />

        <TextView
            android:id="@+id/plotDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/writersDet"
            android:padding="5dp"
            android:text="@string/Plot" />

        <TextView
            android:id="@+id/boxOfficeDet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/plotDet"
            android:padding="5dp"
            android:text="@string/BoxOffice" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
